# rtic-fridge

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config
.github/workflows/: ci.yml
src/: cooler.rs  delay.rs  ds18b20.rs  main.rs  temp_controller.rs  terminal.rs  thermometer.rs
src/controller/: mod.rs  pid.rs
src/onewire/: address.rs  crc.rs  error.rs  mod.rs
src/storage/: mod.rs
src/thermometer/: ds18b20.rs  mod.rs
